--- a/miniprogram/pages/calendar/calendar.wxml
+++ b/miniprogram/pages/calendar/calendar.wxml
@@ -1,5 +1,7 @@
 <!--miniprogram/pages/calendar/calendar.wxml-->
 <view>
-  <month></month>
+  <view class="month-wrapper">
+    <month></month>
+  </view>
   <navbar activeIndex="0"></navbar>
 </view>
