--- a/miniprogram/pages/countdown/countdown.wxss
+++ b/miniprogram/pages/countdown/countdown.wxss
@@ -79,6 +79,14 @@
 .past-str {
   text-align: center;
   padding: 30rpx 0;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+}
+.restday-num {
+  font-size: 110rpx;
+  margin: 10rpx 0;
 }
 .countdown {
   display: flex;
