倒计时样式，提交文本违规检测

--- a/miniprogram/pages/countdown/countdown.wxml
+++ b/miniprogram/pages/countdown/countdown.wxml
@@ -72,6 +72,9 @@
         </view>
       </view>
     </view>
+    <view class="remark-wrapper">
+      <text class="remark">{{remark}}</text>
+    </view>
   </view>
   <navbar activeIndex="1"></navbar>
 </view>
