--- a/miniprogram/components/month/month.wxss
+++ b/miniprogram/components/month/month.wxss
@@ -45,6 +45,7 @@
   display: flex;
   flex-flow: column;
   justify-content: center;
+  font-size: 30rpx;
 }
 .animal {
   display: flex;
@@ -69,7 +70,8 @@
   width: 50rpx;
   height: 50rpx;
   text-align: center;
-  margin-left: 8rpx;
+  margin-left: 10rpx;
+  margin-top: 5rpx;
 }
 .icon-loudou {
   font-size: 50rpx;
@@ -126,4 +128,7 @@
   overflow: hidden;
   text-overflow:ellipsis;
   white-space: nowrap;
+}
+.festival-color {
+  color: #ffd369;
 }
