--- a/miniprogram/pages/userFestival/userFestival.wxml
+++ b/miniprogram/pages/userFestival/userFestival.wxml
@@ -1,4 +1,4 @@
-<view>
+<view class="{{festivals.length === 0 ? 'userfestival-wrapper' : ''}}">
   <view class="userfestival-list">
     <view class="userfestival-item" wx:for="{{festivals}}" wx:key="index" data-index="{{index}}" bindtap="updFestival">
       <view>
