--- a/miniprogram/pages/lunar/lunar.wxml
+++ b/miniprogram/pages/lunar/lunar.wxml
@@ -1,8 +1,8 @@
 <view class="lunar-container">
-  <view class="yang-wrapper">
+  <view class="solar-wrapper">
     <text class="form-item form-title">公历</text>
-    <picker class="picker-wrapper" mode="date" value="{{yangDate}}" start="1900-1-1" end="2100-12-31" bindchange="yangDateChange">
-      <input class="form-item form-inp" value="{{yangDate}}" disabled="true"></input>
+    <picker class="picker-wrapper" mode="date" value="{{solarDate}}" start="1900-1-1" end="2100-12-31" bindchange="solarDateChange">
+      <input class="form-item form-inp" value="{{solarDate}}" disabled="true"></input>
     </picker>
   </view>
   <view class="lunar-wrapper">
@@ -12,6 +12,10 @@
     </picker>
   </view>
   <view class="date-detail">
-  
+    <text class="date-detail-item">{{dateInfo.date}} {{dateInfo.ncWeek}} {{dateInfo.astro}}</text>
+    <text class="date-detail-item date-detail-day">{{dateInfo.cDay}}</text>
+    <text class="date-detail-item">{{dateInfo.lYear}} {{dateInfo.IMonthCn}}{{dateInfo.IDayCn}}</text>
+    <text class="date-detail-item">{{dateInfo.gzYear}}年 【{{dateInfo.Animal}}年】</text>
+    <text class="date-detail-item">{{dateInfo.gzMonth}}月 {{dateInfo.gzDay}}日</text>
   </view>
 </view>
