--- a/miniprogram/components/month/month.wxss
+++ b/miniprogram/components/month/month.wxss
@@ -128,9 +128,9 @@
   width: 100%;
   font-size: 20rpx;
   font-weight: initial;
-  /* overflow: hidden;
+  overflow: hidden;
   text-overflow:ellipsis;
-  white-space: nowrap; */
+  white-space: nowrap;
 }
 .festival-color {
   color: #ffd369;
